--- a/tweet-ui/src/main/res/values-de/strings.xml
+++ b/tweet-ui/src/main/res/values-de/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Tweet gefällt mir</string>
     <string name="tw__liked_tweet">Gefällt mir nicht mehr</string>
     <string name="tw__loading_tweet">Tweet wird geladen</string>
+    <string name="tw__pause">Pause</string>
+    <string name="tw__play">Abspielen</string>
+    <string name="tw__replay">Erneut abspielen</string>
     <string name="tw__retweeted_by_format">Retweetet von %1$s</string>
     <string name="tw__share_content_format">Sieh Dir den Tweet von \@%1$s an: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet von %1$s (\@%2$s)</string>
