--- a/twitter-core/src/main/res/values-de/strings.xml
+++ b/twitter-core/src/main/res/values-de/strings.xml
@@ -21,6 +21,7 @@
     <string name="tw__allow_btn_txt">Erlauben</string>
     <string name="tw__login_btn_txt">Mit Twitter anmelden</string>
     <string name="tw__not_now_btn_txt">Nicht jetzt</string>
-    <string name="tw__share_email_desc">Erhalte Updates und andere Informationen von %1$s, indem Du diesem Nutzer Zugriff auf die E-Mail Deines Twitter Accounts gewährst \@%2$s</string>
+    <string name="tw__share_email_desc">Erlaube %1$s  Zugriff auf die mit Deinem Twitter Account verknüpfte E-Mail Adresse \@%2$s, damit %1$s sie den Datenschutzrichtlinien entsprechend nutzen kann. Zum \
+Beispiel könnte %1$s Dir Updates und andere Informationen an diese Adresse senden.</string>
     <string name="tw__share_email_title">Teile Deine E-Mail Adresse</string>
 </resources>
