--- a/twitter-core/src/main/res/values-iw/strings.xml
+++ b/twitter-core/src/main/res/values-iw/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">אשר</string>
     <string name="tw__login_btn_txt">כניסה באמצעות טוויטר</string>
     <string name="tw__not_now_btn_txt">לא עכשיו</string>
-    <string name="tw__share_email_desc">קבל עדכונים ומידע נוסף מ-%1$s לאחר שתאשר להם גישה לחשבון הדואר האלקטרוני שציינת בטוויטר ‎\@%2$s</string>
+    <string name="tw__share_email_desc">הרשה ל־%1$s לגשת לכתובת הדואר האלקטרוני שמשוייכת לחשבונך בטוויטר ‎\@%2$s כך ש־%1$s יוכל להשתמש בה בהתאם למדיניות הפרטיות. לדוגמה, %1$s יכול לשלוח לך עדכונים ומידע אחר לכתובת הזו.</string>
     <string name="tw__share_email_title">שתף בכתובת הדואר האלקטרוני שלך</string>
 </resources>
