--- a/twitter-core/src/main/res/values-ja/strings.xml
+++ b/twitter-core/src/main/res/values-ja/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">許可</string>
     <string name="tw__login_btn_txt">Twitterにログイン</string>
     <string name="tw__not_now_btn_txt">今はしない</string>
-    <string name="tw__share_email_desc">%1$sからの更新情報を受け取る場合は、ご利用のTwitterアカウント\@%2$sで使用中のメールアドレスでメールの受信を許可してください。</string>
+    <string name="tw__share_email_desc">あなたのTwitterアカウント\@%2$sに登録されているメールアドレスへのアクセスを%1$sに許可します。%1$sはそのメールアドレスをプライバシーポリシーに従って使用できるようになります。たとえば、%1$sはそのアドレス宛に更新情報などを送信することができます。</string>
     <string name="tw__share_email_title">メールアドレスを共有</string>
 </resources>
