--- a/twitter-core/src/main/res/values-ro/strings.xml
+++ b/twitter-core/src/main/res/values-ro/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">Permite</string>
     <string name="tw__login_btn_txt">Conectează-te cu Twitter</string>
     <string name="tw__not_now_btn_txt">Nu acum</string>
-    <string name="tw__share_email_desc">Primește noutăți și alte informații de la %1$s când îi permiți să îți acceseze e-mailul din contul tău Twitter \@%2$s</string>
+    <string name="tw__share_email_desc">Permite ca %1$s să acceseze adresa de e-mail asociată contului tău Twitter \@%2$s, astfel încât %1$s să o folosească în conformitate cu politica sa de confidențialitate. De exemplu, %1$s ți-ar putea trimite actualizări și alte informații la această adresă.</string>
     <string name="tw__share_email_title">Partajează-ți adresa de e-mail</string>
 </resources>
