--- a/tweet-ui/src/main/res/values-da/strings.xml
+++ b/tweet-ui/src/main/res/values-da/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Like Tweet</string>
     <string name="tw__liked_tweet">Fjern like</string>
     <string name="tw__loading_tweet">Indlæser tweet</string>
+    <string name="tw__pause">pause</string>
+    <string name="tw__play">afspil</string>
+    <string name="tw__replay">afspil igen</string>
     <string name="tw__retweeted_by_format">Retweetet af %1$s</string>
     <string name="tw__share_content_format">Tjek \@%1$s\s tweet: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet fra %1$s (\@%2$s)</string>
