--- a/tweet-ui/src/main/res/values-en-rGB/strings.xml
+++ b/tweet-ui/src/main/res/values-en-rGB/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Like Tweet</string>
     <string name="tw__liked_tweet">Undo Like</string>
     <string name="tw__loading_tweet">Loading Tweet</string>
+    <string name="tw__pause">pause</string>
+    <string name="tw__play">play</string>
+    <string name="tw__replay">replay</string>
     <string name="tw__retweeted_by_format">Retweeted by %1$s</string>
     <string name="tw__share_content_format">Check out \@%1$s\'s Tweet: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet from %1$s (\@%2$s)</string>
