--- a/tweet-ui/src/main/res/values-en-rXX/strings.xml
+++ b/tweet-ui/src/main/res/values-en-rXX/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">[Lïíkéê Twéêéêt]</string>
     <string name="tw__liked_tweet">[Undöø Lïíkéê]</string>
     <string name="tw__loading_tweet">[Löøåädïíng Twéêéêt]</string>
+    <string name="tw__pause">[påäüséê]</string>
+    <string name="tw__play">[plåäy]</string>
+    <string name="tw__replay">[réêplåäy]</string>
     <string name="tw__retweeted_by_format">[Réêtwéêéêtéêd by %1$s]</string>
     <string name="tw__share_content_format">[Chéêck öøüt \@%1$s\'s Twéêéêt: https://twïíttéêr.cöøm/%1$s/ståätüs/%2$s]</string>
     <string name="tw__share_subject_format">[Twéêéêt fröøm %1$s (\@%2$s)]</string>
