--- a/tweet-ui/src/main/res/values-fa/strings.xml
+++ b/tweet-ui/src/main/res/values-fa/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">پسندیدن توییت</string>
     <string name="tw__liked_tweet">لغو پسندیدن</string>
     <string name="tw__loading_tweet">بارگیری توییت</string>
+    <string name="tw__pause">توقف موقت</string>
+    <string name="tw__play">پخش</string>
+    <string name="tw__replay">پخش مجدد</string>
     <string name="tw__retweeted_by_format">بازتوییت‌شده توسط %1$s</string>
     <string name="tw__share_content_format">توییت ‎\@%1$s را بر‌رسی کنید: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">توییت‌ از %1$s (‎\@%2$s)</string>
