--- a/tweet-ui/src/main/res/values-fi/strings.xml
+++ b/tweet-ui/src/main/res/values-fi/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Tykkää twiitistä</string>
     <string name="tw__liked_tweet">Kumoa tykkäys</string>
     <string name="tw__loading_tweet">Ladataan twiittiä</string>
+    <string name="tw__pause">pysäytä</string>
+    <string name="tw__play">toista</string>
+    <string name="tw__replay">toista uudelleen</string>
     <string name="tw__retweeted_by_format">Uudelleentwiitannut %1$s</string>
     <string name="tw__share_content_format">Katso käyttäjän \@%1$s twiitti: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Twiitti käyttäjältä %1$s (\@%2$s)</string>
