--- a/tweet-ui/src/main/res/values-fr/strings.xml
+++ b/tweet-ui/src/main/res/values-fr/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Aimer le Tweet</string>
     <string name="tw__liked_tweet">Ne plus aimer</string>
     <string name="tw__loading_tweet">Chargement du Tweet</string>
+    <string name="tw__pause">pause</string>
+    <string name="tw__play">lire</string>
+    <string name="tw__replay">relire</string>
     <string name="tw__retweeted_by_format">Retweeté par %1$s</string>
     <string name="tw__share_content_format">Lisez le Tweet de \@%1$s : https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet de %1$s (\@%2$s)</string>
