--- a/tweet-ui/src/main/res/values-hi/strings.xml
+++ b/tweet-ui/src/main/res/values-hi/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">ट्वीट पसंद करें</string>
     <string name="tw__liked_tweet">पसंद पूर्ववत करें</string>
     <string name="tw__loading_tweet">ट्वीट लोड हो रहे हैं</string>
+    <string name="tw__pause">विराम</string>
+    <string name="tw__play">चलाएँ</string>
+    <string name="tw__replay">रीप्ले</string>
     <string name="tw__retweeted_by_format">%1$s द्वारा रीट्विट</string>
     <string name="tw__share_content_format">\@%1$s के ट्वीट पर नजर डालें: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">%1$s (\@%2$s) से ट्वीट</string>
