--- a/tweet-ui/src/main/res/values-in/strings.xml
+++ b/tweet-ui/src/main/res/values-in/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Menyukai Tweet</string>
     <string name="tw__liked_tweet">Batal Suka</string>
     <string name="tw__loading_tweet">Memuat Tweet</string>
+    <string name="tw__pause">jeda</string>
+    <string name="tw__play">putar</string>
+    <string name="tw__replay">putar ulang</string>
     <string name="tw__retweeted_by_format">Di-retweet oleh %1$s</string>
     <string name="tw__share_content_format">Lihat Tweet \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet dari %1$s (\@%2$s)</string>
