--- a/tweet-ui/src/main/res/values-nb/strings.xml
+++ b/tweet-ui/src/main/res/values-nb/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Lik Tweet</string>
     <string name="tw__liked_tweet">Angre Liker</string>
     <string name="tw__loading_tweet">Laster inn tweeten</string>
+    <string name="tw__pause">pause</string>
+    <string name="tw__play">spill</string>
+    <string name="tw__replay">spill på nytt</string>
     <string name="tw__retweeted_by_format">Retweetet av %1$s</string>
     <string name="tw__share_content_format">Sjekk \@%1$s\s tweet: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet fra %1$s (\@%2$s)</string>
