--- a/tweet-ui/src/main/res/values-pt/strings.xml
+++ b/tweet-ui/src/main/res/values-pt/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Curtir Tweet</string>
     <string name="tw__liked_tweet">Descurtir</string>
     <string name="tw__loading_tweet">Carregando Tweet</string>
+    <string name="tw__pause">pausar</string>
+    <string name="tw__play">reproduzir</string>
+    <string name="tw__replay">repetir</string>
     <string name="tw__retweeted_by_format">Retweetado por %1$s</string>
     <string name="tw__share_content_format">Confira o Tweet de \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet de %1$s (\@%2$s)</string>
