--- a/tweet-ui/src/main/res/values-ro/strings.xml
+++ b/tweet-ui/src/main/res/values-ro/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Apreciază Tweetul</string>
     <string name="tw__liked_tweet">Anulează aprecierea</string>
     <string name="tw__loading_tweet">Se încarcă Tweetul</string>
+    <string name="tw__pause">pauză</string>
+    <string name="tw__play">redă</string>
+    <string name="tw__replay">redă din nou</string>
     <string name="tw__retweeted_by_format">Redistribuit de %1$s</string>
     <string name="tw__share_content_format">Vezi Tweetul lui \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet de la %1$s (\@%2$s)</string>
