--- a/tweet-ui/src/main/res/values-ru/strings.xml
+++ b/tweet-ui/src/main/res/values-ru/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Мне нравится</string>
     <string name="tw__liked_tweet">Не нравится</string>
     <string name="tw__loading_tweet">Загрузка твита</string>
+    <string name="tw__pause">приостановить</string>
+    <string name="tw__play">воспроизвести</string>
+    <string name="tw__replay">повторно воспроизвести</string>
     <string name="tw__retweeted_by_format">Ретвитнуто пользователем %1$s</string>
     <string name="tw__share_content_format">Посмотрите твит пользователя \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Твит от %1$s (\@%2$s)</string>
