--- a/tweet-ui/src/main/res/values-sr/strings.xml
+++ b/tweet-ui/src/main/res/values-sr/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Свиђа ти се твит</string>
     <string name="tw__liked_tweet">Опозови свиђање</string>
     <string name="tw__loading_tweet">Учитавање твита</string>
+    <string name="tw__pause">пауза</string>
+    <string name="tw__play">пусти</string>
+    <string name="tw__replay">понови</string>
     <string name="tw__retweeted_by_format">Ретвитовано од стране %1$s</string>
     <string name="tw__share_content_format">Провери твит \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Твит од %1$s (\@%2$s)</string>
