--- a/tweet-ui/src/main/res/values-sv/strings.xml
+++ b/tweet-ui/src/main/res/values-sv/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Gilla Tweet</string>
     <string name="tw__liked_tweet">Ångra gillamarkeringen</string>
     <string name="tw__loading_tweet">Läser in tweeten</string>
+    <string name="tw__pause">pausa</string>
+    <string name="tw__play">spela</string>
+    <string name="tw__replay">spela om</string>
     <string name="tw__retweeted_by_format">Retweetad av %1$s</string>
     <string name="tw__share_content_format">Kolla in \@%1$ss tweet: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet från %1$s (\@%2$s)</string>
