--- a/tweet-ui/src/main/res/values-tl/strings.xml
+++ b/tweet-ui/src/main/res/values-tl/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Gustuhin ang Tweet</string>
     <string name="tw__liked_tweet">I-undo ang Nagustuhan</string>
     <string name="tw__loading_tweet">Naglo-load ng Tweet</string>
+    <string name="tw__pause">i-pause</string>
+    <string name="tw__play">i-play</string>
+    <string name="tw__replay">i-play muli</string>
     <string name="tw__retweeted_by_format">Ni-retweet ni %1$s</string>
     <string name="tw__share_content_format">Tingnan \@%1$s\'s Tweet: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet mula kay %1$s (\@%2$s)</string>
