--- a/tweet-ui/src/main/res/values-vi/strings.xml
+++ b/tweet-ui/src/main/res/values-vi/strings.xml
@@ -21,6 +21,9 @@
     <string name="tw__like_tweet">Thích Tweet</string>
     <string name="tw__liked_tweet">Hoàn tác Thích</string>
     <string name="tw__loading_tweet">Đang tải Tweet</string>
+    <string name="tw__pause">dừng lại</string>
+    <string name="tw__play">phát</string>
+    <string name="tw__replay">phát lại</string>
     <string name="tw__retweeted_by_format">Đã Tweet lại bởi %1$s</string>
     <string name="tw__share_content_format">Hãy xem Tweet của \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet từ %1$s (\@%2$s)</string>
