--- a/twitter-core/src/main/res/values-ar/strings.xml
+++ b/twitter-core/src/main/res/values-ar/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">السماح</string>
     <string name="tw__login_btn_txt">سجّل الدخول بواسطة تويتر</string>
     <string name="tw__not_now_btn_txt">ليس الآن</string>
-    <string name="tw__share_email_desc">كُن على إطلاع بكل التحديثات ومعلومات أخرى من %1$s عندما تسمح لهم بالدخول إلى بريدك الإلكترونيّ على حساب تويتر الخاصّ بك ‎\@%2$s</string>
+    <string name="tw__share_email_desc">السماح لـ %1$s بالدخول إلى البريد الإلكترونيّ المرتبِط بحساب تويتر الخاصّ بك ‎\@%2$s كي يتمكن %1$s من استخدامه استنادًا إلى سياسة الخصوصيّة الخاصّة به. على سبيل المثال، يمكن لـ %1$s أن يرسِل لك تحديثات ومعلومات أخرى على ذلك العنوان.</string>
     <string name="tw__share_email_title">شارِك عنوان بريدك الإلكترونيّ</string>
 </resources>
