--- a/twitter-core/src/main/res/values-cs/strings.xml
+++ b/twitter-core/src/main/res/values-cs/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">Povolit</string>
     <string name="tw__login_btn_txt">Přihlásit se účtem od Twitteru</string>
     <string name="tw__not_now_btn_txt">Teď ne</string>
-    <string name="tw__share_email_desc">Když uživateli %1$s povolíte přístup k e-mailové adrese ve svém twitterovém účtu \@%2$s, budete od něj dostávat novinky a další informace.</string>
+    <string name="tw__share_email_desc">Povolí uživateli %1$s přístup k e-mailové adrese přidružené k vašemu twitterovému účtu \@%2$s, takže ji pak %1$s bude moct používat podle svých zásad ochrany osobních údajů. Například vám %1$s bude moct na tuto adresu posílat aktualizace a další informace.</string>
     <string name="tw__share_email_title">Sdílejte svou e-mailovou adresu</string>
 </resources>
