--- a/twitter-core/src/main/res/values-ko/strings.xml
+++ b/twitter-core/src/main/res/values-ko/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">허용</string>
     <string name="tw__login_btn_txt">트위터 계정으로 로그인</string>
     <string name="tw__not_now_btn_txt">나중에</string>
-    <string name="tw__share_email_desc">다른 사람이 내 트위터 계정(\@%2$s)을 사용하도록 허락할 경우 %1$s의 최신 소식과 정보를 받습니다.</string>
+    <string name="tw__share_email_desc">%1$s 앱이 내 트위터 계정 \@%2$s에 연결된 이메일 주소에 액세스하여 개인정보 취급방침에 따라 %1$s에서 사용할 수 있도록 허용합니다. 예를 들어 %1$s에서 해당 이메일 주소로 업데이트 및 기타 정보를 보낼 수 있습니다.</string>
     <string name="tw__share_email_title">이메일 주소를 공유하세요.</string>
 </resources>
