--- a/twitter-core/src/main/res/values-ru/strings.xml
+++ b/twitter-core/src/main/res/values-ru/strings.xml
@@ -21,6 +21,6 @@
     <string name="tw__allow_btn_txt">Разрешить</string>
     <string name="tw__login_btn_txt">Войти с учётной записью Твиттера</string>
     <string name="tw__not_now_btn_txt">Не сейчас</string>
-    <string name="tw__share_email_desc">Получать обновления и другую информацию от %1$s, если вы позволите им видеть ваш адрес электронной почты в вашем профиле Твиттера \@%2$s</string>
+    <string name="tw__share_email_desc">Разрешить %1$s доступ к адресу электронной почты, связанному с вашей учетной записью в Твиттере \@%2$s. Таким образом, %1$s сможет использовать его согласно своей политике конфиденциальности. Например, %1$s сможет отправлять обновления или другую информацию на этот адрес.</string>
     <string name="tw__share_email_title">Поделиться своим адресом электронной почты</string>
 </resources>
