--- a/tweet-ui/src/main/res/values-nl/strings.xml
+++ b/tweet-ui/src/main/res/values-nl/strings.xml
@@ -21,7 +21,7 @@
     <string name="tw__like_tweet">Tweet leuk vinden</string>
     <string name="tw__liked_tweet">Niet meer leuk</string>
     <string name="tw__loading_tweet">Tweet laden</string>
-    <string name="tw__pause">pauze</string>
+    <string name="tw__pause">pauzeren</string>
     <string name="tw__play">afspelen</string>
     <string name="tw__replay">opnieuw afspelen</string>
     <string name="tw__retweeted_by_format">Geretweet door %1$s</string>
