--- a/tweet-ui/src/main/res/values/strings.xml
+++ b/tweet-ui/src/main/res/values/strings.xml
@@ -15,8 +15,7 @@
   ~
   -->
 
-<resources
-    xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!--Accessibility strings-->
     <string name="tw__loading_tweet">Loading Tweet</string>
@@ -33,7 +32,7 @@
     <string name="tw__share_content_format">Check out @%1$s\'s Tweet: https://twitter.com/%1$s/status/%2$s</string>
 
     <!--Vine refers to the brand "Vine" and should not be translated-->
-    <string tools:ignore="UnusedResources" name="tw__cta_text">Open in Vine</string>
+    <string name="tw__cta_text">Open in Vine</string>
 
     <!--Video player accessibility strings-->
     <string name="tw__play">play</string>
