Add example showing Tweets from JSON
Change-Id: I352165d3ac9ce9ae0ef9a2edbf06bfcb915f71f8

--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="tweet_load_error">Failed to load Tweet</string>
     <string name="multi_tweet_view_error">Failed to load tweets</string>
     <string name="timeline_empty">No tweets :(</string>
+    <string name="tweet_pojo">Tweet Pojo</string>
 
 </resources>
