--- a/tweet-ui/src/main/res/values-bg/strings.xml
+++ b/tweet-ui/src/main/res/values-bg/strings.xml
@@ -18,7 +18,15 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Харесване на туита</string>
+    <string name="tw__liked_tweet">Отмяна на харесването</string>
+    <string name="tw__loading_tweet">Туитът се зарежда</string>
     <string name="tw__pause">пауза</string>
     <string name="tw__play">пускане</string>
     <string name="tw__replay">повторение</string>
+    <string name="tw__retweeted_by_format">Ретуитнато от %1$s</string>
+    <string name="tw__share_content_format">Виж туита на \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
+    <string name="tw__share_subject_format">Туит от %1$s (\@%2$s)</string>
+    <string name="tw__share_tweet">Споделяне на туита</string>
+    <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
 </resources>
