--- a/tweet-ui/src/main/res/values-ca/strings.xml
+++ b/tweet-ui/src/main/res/values-ca/strings.xml
@@ -18,15 +18,15 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="tw__like_tweet">Gustuhin ang Tweet</string>
-    <string name="tw__liked_tweet">I-undo ang Gusto</string>
-    <string name="tw__loading_tweet">Naglo-load ng Tweet</string>
-    <string name="tw__pause">i-pause</string>
-    <string name="tw__play">i-play</string>
-    <string name="tw__replay">i-play muli</string>
-    <string name="tw__retweeted_by_format">Ni-retweet ni %1$s</string>
-    <string name="tw__share_content_format">Tingnan \@%1$s\'s Tweet: https://twitter.com/%1$s/status/%2$s</string>
-    <string name="tw__share_subject_format">Tweet mula kay %1$s (\@%2$s)</string>
-    <string name="tw__share_tweet">Ibahagi ang Tweet</string>
+    <string name="tw__like_tweet">Fes M\'agrada al tuit</string>
+    <string name="tw__liked_tweet">Desfés el M\'agrada</string>
+    <string name="tw__loading_tweet">S\'està carregant el tuit</string>
+    <string name="tw__pause">atura temporalment</string>
+    <string name="tw__play">reprodueix</string>
+    <string name="tw__replay">torna a reproduir</string>
+    <string name="tw__retweeted_by_format">Retuitat per %1$s</string>
+    <string name="tw__share_content_format">Dóna un cop d\'ull al tuit de \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
+    <string name="tw__share_subject_format">Tuit de %1$s (\@%2$s)</string>
+    <string name="tw__share_tweet">Comparteix el tuit</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
 </resources>
