--- a/tweet-ui/src/main/res/values-el/strings.xml
+++ b/tweet-ui/src/main/res/values-el/strings.xml
@@ -18,10 +18,12 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Μου αρέσει αυτό το Tweet</string>
+    <string name="tw__liked_tweet">Αναίρεση επιλογής \"Μου αρέσει\"</string>
     <string name="tw__loading_tweet">Φόρτωση Tweet</string>
     <string name="tw__pause">παύση</string>
     <string name="tw__play">αναπαραγωγή</string>
-    <string name="tw__replay">επανάληψη</string>
+    <string name="tw__replay">εκ νέου αναπαραγωγή</string>
     <string name="tw__retweeted_by_format">Έγινε Retweet από το χρήστη %1$s</string>
     <string name="tw__share_content_format">Δείτε το Tweet του χρήστη  \@%1$s https://twitter.com/%1$s/status/%2$s</string>
     <string name="tw__share_subject_format">Tweet από το χρήστη %1$s (\@%2$s)</string>
