--- a/tweet-ui/src/main/res/values-hr/strings.xml
+++ b/tweet-ui/src/main/res/values-hr/strings.xml
@@ -18,7 +18,15 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__like_tweet">Označi Tweet oznakom \"sviđa mi se\"</string>
+    <string name="tw__liked_tweet">Poništi oznaku \"sviđa mi se\"</string>
+    <string name="tw__loading_tweet">Učitavanje tweeta</string>
     <string name="tw__pause">pauziraj</string>
     <string name="tw__play">reproduciraj</string>
     <string name="tw__replay">ponovno reproduciraj</string>
+    <string name="tw__retweeted_by_format">%1$s je proslijedio/la Tweet</string>
+    <string name="tw__share_content_format">Pogledajte Tweet korisnika/ce \@%1$s: https://twitter.com/%1$s/status/%2$s</string>
+    <string name="tw__share_subject_format">Tweet korisnika/ce %1$s (\@%2$s)</string>
+    <string name="tw__share_tweet">Podijeli Tweet</string>
+    <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
 </resources>
