--- a/tweet-ui/src/main/res/values-sk/strings.xml
+++ b/tweet-ui/src/main/res/values-sk/strings.xml
@@ -18,12 +18,15 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="tw__like_tweet">Obľúbiť Tweet</string>
-    <string name="tw__loading_tweet">Tweet sa načítava</string>
+    <string name="tw__like_tweet">Obľúbiť si Tweet</string>
+    <string name="tw__liked_tweet">Zrušiť označenie Páči sa mi to</string>
+    <string name="tw__loading_tweet">Načítava sa Tweet</string>
     <string name="tw__pause">pozastaviť</string>
     <string name="tw__play">prehrať</string>
     <string name="tw__replay">prehrať znova</string>
     <string name="tw__retweeted_by_format">Retweetnuté používateľom %1$s</string>
+    <string name="tw__share_content_format">Pozrite si Tweet od používateľa \@%1$s\: https://twitter.com/%1$s/stav/%2$s</string>
+    <string name="tw__share_subject_format">Tweet od používateľa %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Zdieľať Tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
 </resources>
