Translations for Vine's call to action text
Change-Id: If2bf804eca3bf97c54701b6224f349eca6880601

--- a/tweet-ui/src/main/res/values-bg/strings.xml
+++ b/tweet-ui/src/main/res/values-bg/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Отваряне във Vine</string>
     <string name="tw__like_tweet">Харесване на туита</string>
     <string name="tw__liked_tweet">Отмяна на харесването</string>
     <string name="tw__loading_tweet">Туитът се зарежда</string>
