--- a/tweet-ui/src/main/res/values-sr/strings.xml
+++ b/tweet-ui/src/main/res/values-sr/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Отвори на Vine</string>
     <string name="tw__like_tweet">Свиђа ти се твит</string>
     <string name="tw__liked_tweet">Опозови свиђање</string>
     <string name="tw__loading_tweet">Учитавање твита</string>
