--- a/tweet-ui/src/main/res/values-en-rXX/strings.xml
+++ b/tweet-ui/src/main/res/values-en-rXX/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">[Opéên ïín Vïínéê]</string>
     <string name="tw__like_tweet">[Lïíkéê Twéêéêt]</string>
     <string name="tw__liked_tweet">[Undöø Lïíkéê]</string>
     <string name="tw__loading_tweet">[Löøåädïíng Twéêéêt]</string>
