--- a/tweet-ui/src/main/res/values-ru/strings.xml
+++ b/tweet-ui/src/main/res/values-ru/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Открыть в Vine</string>
     <string name="tw__like_tweet">Мне нравится</string>
     <string name="tw__liked_tweet">Не нравится</string>
     <string name="tw__loading_tweet">Загрузка твита</string>
