Add alt text to Tweet views
Jira-Id: TFW-6613
Change-Id: Ic0afb6c63bbbbcafc9239b0a941a9a0d1d359f09

--- a/tweet-ui/src/main/res/values/strings.xml
+++ b/tweet-ui/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="tw__play">play</string>
     <string name="tw__pause">pause</string>
     <string name="tw__replay">replay</string>
+    <string name="tw__tweet_media">Tweet Media</string>
 
 </resources>
